--- a/style.css
+++ b/style.css
@@ -55,10 +55,14 @@ a.navbar-title {font-size: .6em;}
 /*Links and interactives*/
 a:hover {text-decoration: underline; color: black;}
 a {color: black;}
+a.graph-link {color: rgba(207,0,15,0.8);}
+a.graph-link:hover {color: rgba(207,0,15,1); text-decoration: none;}
 a.nav-link, a.nav-button {color: black; font-weight: 700; font-family: 'Noto Sans', 'Helvetica', sans-serif; font-size: 1em;}
+li.nav-icon {list-style: none; padding-left: 4px; padding-right: 4px;}
+a.icon-link {color: rgba(250,250,250,0.7);}
 a.nav-button {transition: all cubic-bezier(0.26, 0.1, 0.27, 1.55) 0.35s;}
-a.nav-link:hover, a.navbar-title:hover {text-decoration: underline;}
-a.navbar-title {display: inline-block; border-radius: 3px; text-align: center; color: black; font-family: 'Noto Sans', 'Helvetica', sans-serif; font-weight: 700;}
+a.icon-link:hover, a.navbar-title:hover {color: rgba(250,250,250,1); text-decoration: none;}
+a.navbar-title {display: inline-block; border-radius: 3px; text-align: center; color: rgba(250,250,250,0.7); font-family: 'Noto Sans', 'Helvetica', sans-serif; font-weight: 700;}
 li.nav-title {margin: 0 auto; list-style-type: none;}
 .nav-link, li.nav-item {font-size: 1em; color: white; font-family: 'Helvetica', sans-serif; list-style: none;}
 button.menu-bars {background-color: inherit; width: 40px; color: white; border: none; position: absolute;}
@@ -69,10 +73,10 @@ div.fa-link::before {display: none;}
 a#arrow {scroll-behavior: smooth; transition: .5s;}
 a#arrow:hover {font-size: 150%;}
 i.fas.fa-chevron-circle-down::before {color: red; scroll-behavior: smooth; transition: .5s;}
-a.nav-arrow {color: rgba(0,0,0,0.6);}
-a.nav-arrow:hover {font-size: 150%; transition: .5s; color: rgba(0,0,0,1); text-decoration: none;}
-a.icon-sub-link, a.page-link-aux {color: rgba(0,0,0,0.6);}
-a.icon-sub-link:hover, a.page-link-aux:hover {text-decoration: none; color: rgba(0,0,0,1);}
+a.nav-arrow {color: rgba(250,250,250,0.8); text-shadow: 1px 1px black;}
+a.nav-arrow:hover {font-size: 150%; transition: .5s; text-decoration: none; color: rgba(250,250,250,1);}
+a.icon-sub-link, a.page-link-aux {color: rgba(250,250,250,0.8); text-shadow: 1px 1px black;}
+a.icon-sub-link:hover, a.page-link-aux:hover {text-decoration: none; color: rgba(250,250,250,1);}
 .page-links {font-family: 'Helvetica', 'Arial', sans-serif; font-weight: 600; color: rgba(0,0,0,0.6); display: inline-block;}
 .page-links:hover {color: rgba(0,0,0,1); text-decoration: none;}
 #current-page {border: 2px solid black; border-radius: 3px;}
@@ -82,14 +86,14 @@ a.icon-sub-link:hover, a.page-link-aux:hover {text-decoration: none; color: rgba
 #footer-link:hover, #footer-logo:hover {color: rgba(255,255,255,1); text-decoration: none;}
 
 /*Text, etc.*/
-p {text-align:left; line-height:180%; font-family: 'Libre Baskerville', 'Georgia', 'Times New Roman', serif; font-size: 15px;}
+p {text-align:left; line-height:180%; font-family: 'Open Sans','Helvetica', arial, sans-serif; font-size: 15px;}
 .title {font-family: 'Open Sans','Helvetica', arial, sans-serif; font-weight: 700; color: black; line-height: 48px; margin-bottom: 15px; text-align: center;}
 #header {font-family: 'Libre Baskerville', 'Georgia', 'Times New Roman', serif; text-decoration: underline; text-shadow: 1px 1px black;}
 #subhead {font-family: 'Noto Sans', 'Helvetica', 'Montserrat', sans-serif; margin: 0 auto; font-weight: 200; text-shadow: 1px 1px black;}
 .hero-caption {font-weight: 500; font-family: 'Open Sans', 'Helvetica', arial, sans-serif; margin: 0 auto; color: rgb(179, 179, 179); font-size: 14px; padding-top: 10px; text-align: center;}
-p.first-letter  {font-size: 36px; background: red; color: white; line-height: .8; margin-top: .1em; margin-left: -.05em; margin-right: .05em; margin-bottom: 0px; font-weight: 400; padding: 5px 10px 5px 10px; width: 50px; display: inline-flex; text-shadow: 1px 1px black;}
+p.first-letter  {font-size: 36px; font-family: 'Libre Baskerville', 'Georgia', 'Times New Roman', serif; background: red; color: white; line-height: .8; margin-top: .1em; margin-left: -.05em; margin-right: .05em; margin-bottom: 0px; font-weight: 400; padding: 5px 10px 5px 10px; width: 50px; display: inline-flex; text-shadow: 1px 1px black;}
 p.first-line {text-transform: uppercase; font-weight: bold; display: inline; margin-bottom: 0px;}
-p#first-graph {display: inline-flex; font-family: 'Libre Baskerville', 'Georgia', 'Times New Roman', serif;}
+p#first-graph {font-family: 'Open Sans','Helvetica', arial, sans-serif;}
 p.pull-quote {font-weight: 600; margin: 0 auto; width: 100%; padding-left: 1%; padding-right: 1%; text-align: center; text-shadow: 1px 1px black; font-style: italic; background: rgba(250,0,0,1); color: white;}
 .headline {font-family: 'Open Sans','Helvetica', arial, sans-serif; font-weight: 200; color: black; text-align: left; margin: 0 auto; padding-bottom: 5px; padding-top: 5px;}
 .byline {font-size: 10px; font-weight: 500; font-family: 'Open Sans', 'Helvetica', arial, sans-serif; color: rgb(179, 179, 179); margin: 0 auto; padding-bottom: 10px;}
@@ -105,7 +109,7 @@ html {scroll-behavior: smooth;}
 #sidebar {position: fixed; width: 200px; height: 100%; background: #151719; Left: -200px; transition: all 500ms linear;}
 #sidebar.active {left: 0px;}
 #sidebar.li {color: white; list-style: none; padding: 15px 10px; border-bottom: 1px solid rgba(100, 100, 100, 0.3);}
-.navbar {font-family: 'Noto Sans', 'Helvetica', 'Montserrat', sans-serif; background-color: white; width: 100%; border-bottom: 1px solid #bfbfbf; position: fixed; z-index: 10;}
+.navbar {font-family: 'Noto Sans', 'Helvetica', 'Montserrat', sans-serif; background-color: rgba(250,250,250,0.2); width: 100%; position: absolute; z-index: 1;}
 .hero-container {display: block; margin: 0 auto; position: relative; width: 100%; background-position: center; background-repeat: no-repeat; background-size: cover; overflow: hidden; height: 100vh; background-image: url("graphic1.jpg");}
 .hero-slide {font-weight: 600; text-align: center; color: white; background: rgba(0, 0, 0, 0.5); font-size: 2em; position: absolute; top: 35%; margin: 0 auto; width: 100%; overflow: hidden;}
 #post1 {margin-top: 40px;}
