--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a.navbar-title {font-size: .6em;}
 
 
 /*Links and interactives*/
-a:hover {text-decoration: underline; color: black;}
+a:hover {text-decoration: none; color: rgba(0,0,0,0.7);}
 a {color: black;}
 a.graph-link {color: rgba(207,0,15,0.8);}
 a.graph-link:hover {color: rgba(207,0,15,1); text-decoration: none;}
