--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 @media only screen and (max-width: 400px) {.page-link-container, p.page-link-subtitle, p.icon-subtitle, a.nav-arrow, .icon-links, .page-links {font-size: .75em;}
 p#first-graph, p.summary {font-size: 14px;}
 p.pull-quote {font-size: .75em;}
-a.navbar-title {font-size: .6em;}
+a.navbar-title {font-size: .45em;}
 .title {font-size: 24px; line-height: 34px;}
 #footer-text {font-size: 8px;}}
 
@@ -132,5 +132,6 @@ html {scroll-behavior: smooth;}
 #footer {width: 100%; margin: 0 auto; background-color: black; height: 85px; color: white; font-family: 'Helvetica', 'Arial', sans-serif; display: block; margin-top: 30px; padding-left: 2%; padding-right: 2%; text-align: center;}
 
 /*Images*/
-#photo1, #photo2, #photo3, #photo4, #photo5 {width: 100%;}
-.photos {text-align: right; margin: 0 auto; margin-top: 30px; display: inline-block;}
+#photo1 {max-width: 900px; margin: 0 auto; margin-bottom: 40px; padding-top: 45px; text-align: left;}
+#photo2, #photo3, #photo4, #photo5 {width: 100%;}
+.photos {text-align: right; margin: 0 auto; margin-top: 30px; display: inline-block; max-width: 900px;}
