--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   a.navbar-title {margin: 0 auto; font-size: 1em;}
   .title {font-size: 48px; padding-top: 45px; line-height: 58px;}
   .page-links {padding-left: 3%; padding-right: 3%; font-size: 16px;}
+  p.section-title {font-size: 24px;}
   p.icon-subtitle, p.page-link-subtitle {font-size: 10px;}
   p.pull-quote {font-size: 1.5em;}
   p#first-graph, p.summary {font-size: 18px;}
@@ -30,6 +31,7 @@
     a.nav-link, li.nav-item {display: none;}
     a.navbar-title {font-size: .75em;}
     p.pull-quote {font-size: 1em;}
+    p.section-title {font-size: 20px;}
     p#first-graph, p.summary {font-size: 16px;}
     button.menu-bars {margin-left: 0px; display: inline-block;}
     button.contact {margin-left: auto; margin-right: 15px;}
@@ -43,6 +45,7 @@
 @media only screen and (max-width: 400px) {.page-link-container, p.page-link-subtitle, p.icon-subtitle, a.nav-arrow, .icon-links, .page-links {font-size: .75em;}
 p#first-graph, p.summary {font-size: 14px;}
 p.pull-quote {font-size: .75em;}
+p.section-title {font-size: 18px;}
 a.navbar-title {font-size: .45em;}
 .title {font-size: 24px; line-height: 34px;}
 #footer-text {font-size: 8px;}}
@@ -103,6 +106,7 @@ p.first-letter  {font-size: 36px; font-family: 'Libre Baskerville', 'Georgia', '
 p.first-line {margin-bottom: 0px;}
 p#first-graph {font-family: 'Open Sans','Helvetica', arial, sans-serif; display: inline;}
 p.pull-quote {font-weight: 600; margin: 0 auto; width: 100%; padding-left: 1%; padding-right: 1%; text-align: center; text-shadow: 1px 1px black; font-style: italic; background: rgba(250,0,0,1); color: white;}
+p.section-title {font-family: 'Open Sans','Helvetica', arial, sans-serif; font-weight: 700; color: black;}
 .headline {font-family: 'Open Sans','Helvetica', arial, sans-serif; font-weight: 200; color: black; text-align: left; margin: 0 auto; padding-bottom: 5px; padding-top: 5px;}
 .byline {font-weight: 500; font-family: 'Open Sans', 'Helvetica', arial, sans-serif; margin: 0 auto; color: rgba(0,0,0,0.6); font-size: 14px; padding-top: 10px; padding-bottom: 10px; text-align: left;}
 .caption {font-size: 10px; font-weight: 500; font-family: 'Open Sans', 'Helvetica', arial, sans-serif; margin: 0 auto; color: rgb(179, 179, 179); text-align: left;}
